--- a/Projet_DL.ipynb
+++ b/Projet_DL.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Projet de Deep Learning"
+    "# Projet de Deep Learning Sujet :"
    ]
   }
  ],
