--- a/Projet_DL.ipynb
+++ b/Projet_DL.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -87,25 +87,155 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Aperçu des premières lignes :\n",
-      "                Price\n",
-      "Date                 \n",
-      "2000-01-03  16.165972\n",
-      "2000-01-04  15.711578\n",
-      "2000-01-05  15.379528\n",
-      "2000-01-06  14.855226\n",
-      "2000-01-07  15.047465\n",
+      "Aperçu des premières lignes :\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-01-03</th>\n",
+       "      <td>16.165972</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-04</th>\n",
+       "      <td>15.711578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-05</th>\n",
+       "      <td>15.379528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-06</th>\n",
+       "      <td>14.855226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-07</th>\n",
+       "      <td>15.047465</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Price\n",
+       "Date                 \n",
+       "2000-01-03  16.165972\n",
+       "2000-01-04  15.711578\n",
+       "2000-01-05  15.379528\n",
+       "2000-01-06  14.855226\n",
+       "2000-01-07  15.047465"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Dimensions initiales : (8605, 1)\n",
       "\n",
-      "Aperçu après nettoyage :\n",
-      "               Price\n",
-      "Date                \n",
-      "1993-10-18  4.227787\n",
-      "1993-10-19  4.120383\n",
-      "1993-10-20  4.149676\n",
-      "1993-10-21  4.218023\n",
-      "1993-10-22  4.315662\n",
+      "Aperçu après nettoyage :\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1993-10-18</th>\n",
+       "      <td>4.227787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993-10-19</th>\n",
+       "      <td>4.120383</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993-10-20</th>\n",
+       "      <td>4.149676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993-10-21</th>\n",
+       "      <td>4.218023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993-10-22</th>\n",
+       "      <td>4.315662</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Price\n",
+       "Date                \n",
+       "1993-10-18  4.227787\n",
+       "1993-10-19  4.120383\n",
+       "1993-10-20  4.149676\n",
+       "1993-10-21  4.218023\n",
+       "1993-10-22  4.315662"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Dimensions après nettoyage : (7339, 1)\n"
      ]
@@ -132,7 +262,7 @@
     "\n",
     "# Affichage des premières lignes et dimensions\n",
     "print(\"\\nAperçu des premières lignes :\")\n",
-    "print(df_raw.head())\n",
+    "display(df_raw.head())\n",
     "print(\"\\nDimensions initiales :\", df_raw.shape)\n",
     "\n",
     "# Retirer les lignes contenant des NaN dans la colonne 'Price'\n",
@@ -143,7 +273,7 @@
     "\n",
     "# Vérification après nettoyage\n",
     "print(\"\\nAperçu après nettoyage :\")\n",
-    "print(df_raw.head())\n",
+    "display(df_raw.head())\n",
     "print(\"\\nDimensions après nettoyage :\", df_raw.shape)\n",
     "\n"
    ]
