remplace !pip par %pip pour env.

--- a/Projet_DL.ipynb
+++ b/Projet_DL.ipynb
@@ -84,12 +84,12 @@
     "\n",
     "# Commandes pip install (à exécuter une seule fois avant le premier lancement du script) :\n",
     "\n",
-    "'''!pip install numpy pandas matplotlib\n",
-    "!pip install pandas-ta\n",
-    "!pip install plotly\n",
-    "!pip install scikit-learn\n",
-    "!pip install tensorflow\n",
-    "!pip install keras '''\n",
+    "'''%pip install numpy pandas matplotlib\n",
+    "%pip install pandas-ta\n",
+    "%pip install plotly\n",
+    "%pip install scikit-learn\n",
+    "%pip install tensorflow\n",
+    "%pip install keras '''\n",
     "\n",
     "\n",
     "# Bibliothèques standards\n",
