--- a/Projet_DL.ipynb
+++ b/Projet_DL.ipynb
@@ -392,20 +392,15 @@
     }
    ],
    "source": [
-    "# - Calcul des rendements log (R_t = log(X_t / X_{t-1}))\n",
-    "# - Moyennes mobiles sur K jours, volatilités annualisées\n",
-    "# - EMA (Exponentially Moving Average) / Price\n",
-    "# - Fenêtre glissante n = 3 * 25\n",
-    "\n",
     "df = df_raw.copy()\n",
     "\n",
     "# 2.1 Calcul du rendement log\n",
     "df[\"Return\"] = np.log(df[\"Price\"] / df[\"Price\"].shift(1))\n",
-    "df = df.dropna()  # Retirer la première ligne NaN\n",
+    "df = df.dropna()  \n",
     "\n",
     "# 2.2 Définition des horizons K\n",
     "K_list = [5, 25, 75, 150, 252, 3*252]  # 1W, 1M, 3M, 6M, 1Y, 3Y\n",
-    "K_list = [K for K in K_list if K < len(df)]  # Filtrage pour les bases courtes\n",
+    "K_list = [K for K in K_list if K < len(df)]  \n",
     "\n",
     "# Calcul des moyennes mobiles et volatilités annualisées\n",
     "for K in K_list:\n",
